--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_GCC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_GCC.css
@@ -31,10 +31,12 @@
 /*首页_主体_左部_详情*/
 .div_body .div_body_left .div_body_left_body_xq{ height: auto;}
 .div_body .div_body_left .div_body_left_body_xq .p_body_left_body_xq{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx{ height: auto;width: 100%;display: block;margin-left: 10px;float: left;font-size: 16px;margin-bottom:10px;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx{ height: auto;width: 100%;display: block;margin-left: 10px;margin-bottom: 30px;float: left;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_left{ font-size: 16px;float: left;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right{ margin-left: 20px;color: #666666;float: left;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right{width: 96px;text-align: center;display: inline-block;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .p_body_left_body_xq_xx_right{ width: 50%;float: left;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .p_body_left_body_xq_xx_right .span_body_left_body_xq_xx_left{width: 96px;text-align: right;display: inline-block;margin-left: 30px;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .p_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right{width: 120px;text-align: left;display: inline-block;margin-left: 30px;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right_fwld{width: 96px;text-align: center;display: inline-block;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right{ width: 96px;height: 70px;display: inline-block;margin-bottom: 10px;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right .img_body_left_body_xq_xx_right{ width: 40px;height: 40px;display: block;margin-left: 28px;}
@@ -43,9 +45,6 @@
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .ul_body_left_body_xq_xx{ width: 860px;padding: 0;margin-bottom:0;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .li_body_left_body_xq_xx{ width: 405px;height: 350px;margin-right: 10px;margin-bottom: 10px;display: inline-block;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .img_body_left_body_xq_xx{ width: 405px;height: 350px;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx_bcms{ height: 300px;overflow: hidden;}
-.div_body_left_body_xq_zk_bcms{display: block; width: 820px;height: 48px;text-align: center;float: left;color: #bc6ba6;cursor: pointer;}
-.div_body_left_body_xq_zk_bcms .i_body_left_body_xq_zk_bcms{width: 12px;height: 12px;display: inline-block;background-image: url(../../images/head_nav_down1.png);margin-left: 5px;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_zk{padding-top: 10px;display: none; width: 820px;height: 48px;text-align: center;float: left;border: 1px solid #cccccc;border-radius: 2px;margin-left: 10px;background-color:rgba(204,204,204,0.2); }
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_zk:hover{background-color:rgba(204,204,204,0.6);cursor: pointer;}
 /*首页_主体_左部_小区详情*/
