--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_ZC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_ZC.cshtml
@@ -28,10 +28,10 @@
                 <span class="spanFWCZ">类别</span>
             </div>
             <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                <div id="divLBText" class="div_select_out SRK" style="width: 180px;">
+                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 180px;">
                         <input type="hidden" id="LBID"/>
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
+                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 150px;">请选择类别</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
@@ -49,16 +49,14 @@
             </div>
             <div id="divXLTip"></div>
         </div>
-        <div id="divFWFW" class="div_row" style="z-index: 998">
+        <div id="divFWFW" class="div_row" style="z-index: 996;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span id="spanFWFW">服务区域</span>
+                <span id="spanFWFW">服务范围</span>
             </div>
-            <div class="div_row_right">
-                <input id="FWFW" column="FWFW" class="span_spaninput input_input SRK" readonly="readonly" type="text" placeholder="请输入服务区域"/>
-                <div id="div_row_right_FWFW" class="div_row_right_FWFW" style="z-index: 997;"></div>
+            <div id="divFWFWText" class="div_row_right">
             </div>
-            <div id="divFWFWTip" style="z-index:996"></div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
