--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DJ.cshtml
@@ -44,16 +44,14 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
         </div>
-        <div id="divFWFW" class="div_row" style="z-index: 998">
+        <div id="divFWFW" class="div_row" style="z-index: 996;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span id="spanFWFW">服务区域</span>
+                <span id="spanFWFW">服务范围</span>
             </div>
-            <div class="div_row_right">
-                <input id="FWFW" column="FWFW" class="span_spaninput input_input SRK" type="text" placeholder="请输入服务区域" />
-                <div id="div_row_right_FWFW" class="div_row_right_FWFW" style="z-index: 997;"></div>
+            <div id="divFWFWText" class="div_row_right">
             </div>
-            <div id="divFWFWTip" style="z-index: 996"></div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
@@ -72,7 +70,7 @@
         </div>
         <div id="divFWZP" class="div_row_zp">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">&nbsp;</span>
+                <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanFWZP" style="vertical-align: top">上传照片</span>
             </div>
             <div class="div_row_right">
