--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPL.cshtml
@@ -35,16 +35,14 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
         </div>
-        <div id="divFWFW" class="div_row" style="z-index: 998">
+        <div id="divFWFW" class="div_row" style="z-index: 996;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span id="spanFWFW">服务区域</span>
+                <span id="spanFWFW">服务范围</span>
             </div>
-            <div class="div_row_right">
-                <input id="FWFW" column="FWFW" class="span_spaninput input_input SRK" readonly="readonly" type="text" placeholder="请输入服务区域"/>
-                <div id="div_row_right_FWFW" class="div_row_right_FWFW" style="z-index: 997;"></div>
+            <div id="divFWFWText" class="div_row_right">
             </div>
-            <div id="divFWFWTip" style="z-index:996"></div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
@@ -112,7 +110,7 @@
             <span class="span_split">联系人信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 991;">
+        @*<div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">详细地址</span>
@@ -138,7 +136,7 @@
                 <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
             </div>
             <div id="divSZQYTip"></div>
-        </div>
+        </div>*@
         <div id="divLXR" class="div_row" style="z-index: 990">
             <div class="div_row_left font_three">
                 <span class="span_required">*</span>
