--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_JX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_JX.css
@@ -7,20 +7,8 @@
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 25px;font-weight: 700;height: 45px;overflow:hidden;padding: 10px;}
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 30px;padding: 10px;font-size: 16px;}
 /*首页_主体_左部_信息主要内容*/
-.div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;font-size: 16px;}
-.div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
-.div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show{ width: 460px;height: 350px;}
-.div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show:hover{ cursor: pointer;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list{ width: 400px;overflow: hidden;display: inline-block;float: left;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{width: 2000px;height: 76px;padding: 0;margin-top: 10px;float: left;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an{float: left;height: 76px;width: 25px;font-size: 20px;margin-top: 10px;background-color: rgba(0, 0, 0, 0.3);color: #ffffff;padding: 25px 5px;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an:hover{ cursor: pointer;background-color: rgba(0, 0, 0, 0.6);}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp{float: left;height: 76px;margin-right: 10px;width: 90px;position: relative;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp:hover{ cursor: pointer;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .img_body_left_body_left_list_tp{ width: 90px;height: 76px;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp{ position: absolute;width: 90px;height: 76px;top: 0;left: 0;background-color: rgba(0, 0, 0, 0.5); }
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp:hover{background-color: rgba(0, 0, 0, 0);}
-.div_body .div_body_left .div_body_left_body_right{ width: 380px;height: 475px;float: left;}
+.div_body .div_body_left .div_body_left_body{ width: 100%;height: 350px;margin-top: 20px;font-size: 16px;}
+.div_body .div_body_left .div_body_left_body_right{ width: 100%;height: 350px;float: left;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_first{ height: 40px;width: 100%;padding: 0px 70px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj{ color: #bc6ba6;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zjdw{ color: #bc6ba6;font-size: 16px;}
@@ -57,3 +45,7 @@
 .div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_right{ text-align: left;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx{ width: 820px;height: auto;margin-left: 20px;}
 .div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx .p_body_left_body_xqxx_dtxx{ height: 40px;color: #999;padding: 6px 20px;font-size: 18px;background-color: rgba(204,204,204,0.3);}
+
+.div_body .div_body_left .ul_body_left_body_cnxh .li_body_left_body_cnxh .p_li_body_left_body_cnxh_xq{ height: 40px;}
+.div_body .div_body_left .ul_body_left_body_jptj .li_body_left_body_jptj .p_li_body_left_body_jptj_xq{ height: 40px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ height: 60px;}
