--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JX.cshtml
@@ -50,7 +50,7 @@
             </div>
             <div id="divBBTip"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 992;">
+        @*<div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">价格</span>
@@ -62,7 +62,7 @@
                 </span>
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 991;"></div>
-        </div>
+        </div>*@
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">服务描述</span>
             <em class="em_split"></em>
