--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_QCMRZS.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_QCMRZS.css
@@ -46,3 +46,7 @@
 .div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_right{ text-align: left;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx{ width: 820px;height: auto;margin-left: 20px;}
 .div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx .p_body_left_body_xqxx_dtxx{ height: 40px;color: #999;padding: 6px 20px;font-size: 18px;background-color: rgba(204,204,204,0.3);}
+
+.div_body .div_body_left .ul_body_left_body_cnxh .li_body_left_body_cnxh .p_li_body_left_body_cnxh_xq{ height: 40px;}
+.div_body .div_body_left .ul_body_left_body_jptj .li_body_left_body_jptj .p_li_body_left_body_jptj_xq{ height: 40px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ height: 60px;}
