--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCMRZS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCMRZS.cshtml
@@ -22,121 +22,14 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 999">
+        <div id="divLB" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
+                <span id="spanLB">类别</span>
             </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="LBID" />
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divLBText" class="div_row_right">
             </div>
-            <div id="divOUTLBTip"></div>
-        </div>
-        <div id="divQCMRZSXCDD" class="div_row" style="z-index: 998; display: none;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">洗车地点</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divXCDDText" class="div_select_out SRK">
-                    <div id="divXCDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXCDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择洗车地点</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divXCDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divQCMRZSXCDDTip"></div>
-        </div>
-        <div id="divQCMRZSXCFS" class="div_row" style="z-index: 997; display: none;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">洗车方式</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divXCFSText" class="div_select_out SRK">
-                    <div id="divXCFSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXCFS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择洗车方式</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divXCFS" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divQCMRZSXCFSTip"></div>
-        </div>
-        <div id="divQCMRZSPP" class="div_row" style="z-index: 996; display: none;">
-            <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">品牌</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divPPText" class="div_select_out SRK">
-                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divQCMRZSPPTip"></div>
-        </div>
-        <div id="divQCMRZSPZ" class="div_row" style="z-index: 995; display: none;">
-            <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">品种</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divPZText" class="div_select_out SRK">
-                    <div id="divPZSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品种</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPZ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divQCMRZSPZTip"></div>
-        </div>
-        <div id="divQCMRZSTMFW" class="div_row" style="z-index: 995; display: none;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">贴膜范围</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divTMFWText" class="div_select_out SRK">
-                    <div id="divTMFWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanTMFW" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择贴膜范围</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divTMFW" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divQCMRZSTMFWTip"></div>
-        </div>
-        <div id="divJG" class="div_row" style="z-index: 994;">
-            <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">价格</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanJG" class="span_spaninput SRK">
-                    <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
-                    <span class="spaninput_fontcolor">元</span>
-                </span>
-            </div>
-            <div id="divJGTip" class="Warn" style="z-index: 994;"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
@@ -207,7 +100,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">详细地址</span>
+                <span class="spanFWCZ">商家地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
