--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_QCMRZS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_QCMRZS.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-
     Layout = "~/Areas/Business/Views/Shared/CXLB.cshtml";
 }
 @section Section_Head {
@@ -9,11 +8,11 @@
 @section Section_Body {
     <div id="divCondition" class="div_condition">
         <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
-        <div id="div_condition_body_XCFS" class="div_condition_body"></div>
+        @*<div id="div_condition_body_XCFS" class="div_condition_body"></div>
         <div id="div_condition_body_XCDD" class="div_condition_body"></div>
         <div id="div_condition_body_PZ" class="div_condition_body"></div>
         <div id="div_condition_body_PP" class="div_condition_body"></div>
-        <div id="div_condition_body_TMFW" class="div_condition_body"></div>
+        <div id="div_condition_body_TMFW" class="div_condition_body"></div>*@
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
@@ -24,8 +23,6 @@
     <div id="divBody" class="div_body">
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
-            <li class="li_body_head">个人</li>
-            <li class="li_body_head">商家</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
             <ul id="ul_body_left" class="ul_body_left"></ul>
