--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GHSPNJYC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GHSPNJYC.cshtml
@@ -22,38 +22,23 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 996;">
+        <div id="divLB" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span id="spanOUTLB">类别</span>
+                <span id="spanLB">类别</span>
             </div>
-            <div id="divOUTLBText" class="div_row_right">
+            <div id="divLBText" class="div_row_right">
             </div>
-            <div id="divOUTLBTip" style="margin-top: 0;"></div>
+            <div id="divLBTip" style="margin-top: 0;"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 992;">
-            <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">价格</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanJG" class="span_spaninput SRK">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
-                        <span class="spaninput_fontcolor">元</span>
-                    </span>
-            </div>
-            <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
-        </div>
-        <div id="divFWFW" class="div_row" style="z-index: 998">
+        <div id="divFWFW" class="div_row" style="z-index: 996;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span id="spanFWFW">服务区域</span>
+                <span id="spanFWFW">服务范围</span>
             </div>
-            <div class="div_row_right">
-                <input id="FWFW" column="FWFW" class="span_spaninput input_input SRK" readonly="readonly" type="text" placeholder="请输入服务区域"/>
-                <div id="div_row_right_FWFW" class="div_row_right_FWFW" style="z-index: 997;"></div>
+            <div id="divFWFWText" class="div_row_right">
             </div>
-            <div id="divFWFWTip" style="z-index:996"></div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
