--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPJ.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div id="divLB" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span id="spanLB">类别</span>
             </div>
             <div id="divLBText" class="div_row_right">
@@ -45,13 +45,13 @@
             <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
-            <span class="span_split">特色描述</span>
+            <span class="span_split">详细信息</span>
             <em class="em_split"></em>
         </div>
         <div id="divBCMS" class="div_row" style="height: 253px; z-index: 995;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanBCMS" style="vertical-align: top">服务介绍</span>
+                <span id="spanBCMS" style="vertical-align: top">补充描述</span>
             </div>
             <div class="div_row_right">
                 <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
@@ -113,7 +113,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">商家地址</span>
+                <span class="spanFWCZ">详细地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
