--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/CWCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/CWCX.css
@@ -12,8 +12,8 @@
 .div_condition .ul_condition_head .li_condition_head{display: inline-block;float: left;text-align: center;color: #999999;font-size: 16px;width: 100px;height: 40px;padding: 8px 10px;background-color: #eeeff1;cursor: pointer;}
 .div_condition .div_condition_body{ width: 100%;height: auto;}
 .div_condition .div_condition_body .ul_condition_body{ padding: 0;width: 1110px;height: 30px;}
-.div_condition .div_condition_body .ul_condition_body .li_condition_body_first{ font-weight: 700;color: #999999;float: left;font-size: 14px;display: inline-block;width: 80px;height: 100%;padding-left: 20px;}
-.div_condition .div_condition_body .ul_condition_body .li_condition_body{ display: inline-block;width: auto;height: 100%;margin-right: 20px;font-size: 14px;margin-bottom: 10px;}
+.div_condition .div_condition_body .ul_condition_body .li_condition_body_first{ font-weight: 700;color: #999999;float: left;font-size: 14px;display: inline-block;width: 90px;height: 100%;padding-left: 20px;}
+.div_condition .div_condition_body .ul_condition_body .li_condition_body{ display: inline-block;width: auto;height: 100%;margin-right: 20px;font-size: 14px;margin-bottom:10px;}
 .div_condition .div_condition_body .ul_condition_body .li_condition_body:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .div_condition .div_condition_body .ul_condition_body .li_condition_body_active{color: #bc6ba6;}
 .div_condition .div_condition_body .ul_condition_body .input_zj{ width: 60px;margin-right: 5px;}
@@ -51,10 +51,10 @@
 .div_body .div_body_left .ul_body_left .li_body_left:hover .p_li_body_left_center_bt{ color: #bc6ba6;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{height: 155px;width: 180px;float: left;display: inline-block;position: relative;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .img_li_body_left{ width: 180px;height: 135px;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .div_img_li_body_left_count{ padding: 0px 6px;background:rgba(0,0,0,0.6);position: absolute;width: 35px;height: 20px;left: 0;bottom: 20px;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .div_img_li_body_left_count{ padding: 0px 6px;background:rgba(0,0,0,.6);position: absolute;width: 35px;height: 20px;left: 0;bottom: 20px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .div_img_li_body_left_count span{ color: #ffffff;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 660px;height: 100%;padding: 10px;float: left;display: inline-block;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_bt{ font-size: 20px;font-weight: 700;height: 32px;overflow: hidden;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_bt{ font-size: 20px;font-weight: 700;height: 32px;overflow:hidden;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_cs{ color: #999999;height: 35px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_dz{ color: #999999;height: 35px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_nr{ font-size: 16px;color: #999999;height: 45px;overflow: hidden;}
@@ -78,7 +78,7 @@
 .div_body .div_body_right .ul_body_right .li_body_right{width: 180px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;}
 .div_body .div_body_right .ul_body_right .li_body_right:hover{ cursor: pointer;}
 .div_body .div_body_right .ul_body_right .li_body_right .img_li_body_right{ height: 120px;width: 100%;margin-bottom: 10px;}
-.div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_xq{ width: 100%;height: 40px;display: block;overflow: hidden;margin-bottom: 2px;font-size: 14px;}
+.div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 14px;overflow: hidden;}
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 14px;}
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_jg{width: 100%;height: 20px;display: block;color: #bc6ba6;font-weight: 700;font-size: 14px;margin-bottom: 2px;}
 
