--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWG.cshtml
@@ -27,22 +27,26 @@
             </div>
             <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divOUTXLBQ" class="div_row" style="z-index: 998;">
+        <div id="divCWGPZ" class="div_row" style="z-index: 998">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">品种</span>
             </div>
             <div class="div_row_right">
-                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 160px;">
-                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 160px;">
-                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 120px; text-align: left;">请选择品种</div>
-                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
+                <div id="divPZText" class="div_select_out SRK" style="position: relative; z-index: 997; width: 325px;">
+                    <div id="divPZSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 325px;">
+                        <span id="spanPZ" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 295px;">请选择品种</span>
+                        <div class="span_select_arrow"></div>
                     </div>
                 </div>
-                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
+                <div class="div_row_right_jcpp">
+                    <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
+                    </div>
+                    <div id="div_row_right_jcpp_second" class="div_row_right_jcpp_item div_row_right_jcpp_second">
+                    </div>
                 </div>
             </div>
-            <div id="divOUTXLBQTip" class="Warn" style="z-index: 996"></div>
+            <div id="divCWGPZTip" class="Warn" style="z-index: 995;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 995;">
             <div class="div_row_left font_two">
@@ -76,7 +80,7 @@
                 <span class="spanFWCZ">年龄</span>
             </div>
             <div class="div_row_right">
-                <input id="NL" maxlength="9" column="NL" class="input_input spaninput_fontcolor" type="text" style="width: 160px" />
+                <input id="NL" maxlength="9" column="NL" class="input_input spaninput_fontcolor" type="text" style="width: 160px; text-align: center;" />
                 <div id="divNLDWText" class="div_select_out SRK" style="z-index: 992;">
                     <div id="divNLDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanNLDW" column="NLDW" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择年龄单位</span>
