--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
@@ -12,37 +12,41 @@
             <span class="span_split">基本信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divGQ" class="div_row">
+        <div id="divSF" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">供求</span>
+                <span class="spanFWCZ">身份</span>
             </div>
             <div class="div_row_right">
-                <div class="div_radio" id="div_gq_zr">
-                    <img class="img_radio" id="img_gq_zr" /><label class="label_radio">转让</label>
+                <div class="div_radio" id="div_sf_grzr">
+                    <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人</label>
                 </div>
-                <div class="div_radio" id="div_gq_qg">
-                    <img class="img_radio" id="img_gq_qg" /><label class="label_radio">求购</label>
+                <div class="div_radio" id="div_sf_sjzr">
+                    <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divGQTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divOUTXLBQ" class="div_row" style="z-index: 998;">
+        <div id="divCWMPZ" class="div_row" style="z-index: 998">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">品种</span>
             </div>
             <div class="div_row_right">
-                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 160px;">
-                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 160px;">
-                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 120px; text-align: left;">请选择品种</div>
-                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
+                <div id="divPZText" class="div_select_out SRK" style="position: relative; z-index: 997; width: 325px;">
+                    <div id="divPZSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 325px;">
+                        <span id="spanPZ" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 295px;">请选择品种</span>
+                        <div class="span_select_arrow"></div>
                     </div>
                 </div>
-                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
+                <div class="div_row_right_jcpp">
+                    <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
+                    </div>
+                    <div id="div_row_right_jcpp_second" class="div_row_right_jcpp_item div_row_right_jcpp_second">
+                    </div>
                 </div>
             </div>
-            <div id="divOUTXLBQTip" class="Warn" style="z-index: 997"></div>
+            <div id="divCWMPZTip" class="Warn" style="z-index: 995;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
