--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
@@ -61,31 +61,53 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 995;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 991;">
+        <div id="divZSZS" class="div_row" style="z-index: 995;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">所在区域</span>
+                <span class="spanFWCZ">在售只数</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK">
-                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="QYCode" />
-                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
+                <span id="spanZSZS" class="span_spaninput SRK" style="display: inline-block;">
+                    <input class="input_spaninput spaninput_fontcolor" id="ZSZS" maxlength="9" column="ZSZS" type="text" style="width: 120px" />
+                    <span class="spaninput_fontcolor">只</span>
+                </span>
+            </div>
+            <div id="divZSZSTip" class="Warn" style="z-index: 994;"></div>
+        </div>
+        <div id="divCWMNL" class="div_row" style="z-index: 993">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">年龄</span>
+            </div>
+            <div class="div_row_right">
+                <input id="NL" maxlength="9" column="NL" class="input_input spaninput_fontcolor" type="text" style="width: 160px; text-align: center;" />
+                <div id="divNLDWText" class="div_select_out SRK" style="z-index: 992;">
+                    <div id="divNLDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanNLDW" column="NLDW" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择年龄单位</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divNLDW" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK">
-                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
+                <div id="divCWMNLTip" class="Warn" style="z-index: 991;"></div>
+            </div>
+        </div>
+        <div id="divCWMXB" class="div_row" style="z-index: 990">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">性别</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divXBText" class="div_select_out SRK" style="z-index: 989;">
+                    <div id="divXBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanXB" column="XB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divXB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 984;"></div>
+            <div id="divCWMXBTip" class="Warn" style="z-index: 988;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
