--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWFW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWFW.cshtml
@@ -12,23 +12,23 @@
             <span class="span_split">基本信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divCWFWLB" class="div_row" style="z-index: 999">
+        <div id="divLB" class="div_row" style="z-index: 999;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
+                <span id="spanLB">类别</span>
             </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in">
-                        <input type="hidden" id="LBID"/>
-                        <span id="spanLB" class="span_select spaninput_fontcolor">请选择类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown">
-                    </div>
-                </div>
+            <div id="divLBText" class="div_row_right">
             </div>
-            <div id="divCWFWLBTip" class="Warn" style="z-index: 998;"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
+        </div>
+        <div id="divFWFW" class="div_row" style="z-index: 998;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanFWFW">服务范围</span>
+            </div>
+            <div id="divFWFWText" class="div_row_right">
+            </div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 997;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 997;">
             <div class="div_row_left font_two">
@@ -42,32 +42,6 @@
                     </span>
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 996;"></div>
-        </div>
-        <div id="divSZQY" class="div_row" style="z-index: 995;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">所在区域</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK">
-                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="QYCode" />
-                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-                <div id="divDDText" class="div_select_out SRK">
-                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 994;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
