--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWYPSP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWYPSP.cshtml
@@ -12,46 +12,29 @@
             <span class="span_split">基本信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divGQ" class="div_row">
+        <div id="divSF" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">供求</span>
+                <span class="spanFWCZ">身份</span>
             </div>
             <div class="div_row_right">
-                <div class="div_radio" id="div_gq_zr">
-                    <img class="img_radio" id="img_gq_zr"/><label class="label_radio">转让</label>
+                <div class="div_radio" id="div_sf_grzr">
+                    <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人</label>
                 </div>
-                <div class="div_radio" id="div_gq_qg">
-                    <img class="img_radio" id="img_gq_qg"/><label class="label_radio">求购</label>
+                <div class="div_radio" id="div_sf_sjzr">
+                    <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divGQTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divCWYPSPLB" class="div_row" style="z-index: 999">
+        <div id="divLB" class="div_row" style="z-index: 999;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
+                <span id="spanLB">类别</span>
             </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="LBID"/>
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-                <div id="divXLText" class="div_select_out SRK" style="display: none">
-                    <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0px;">请选择小类</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divXL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divLBText" class="div_row_right">
             </div>
-            <div id="divCWYPSPLBTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 998;">
             <div class="div_row_left font_two">
@@ -82,32 +65,6 @@
                     </span>
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 994;"></div>
-        </div>
-        <div id="divSZQY" class="div_row" style="z-index: 991;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">所在区域</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK">
-                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="QYCode" />
-                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-                <div id="divDDText" class="div_select_out SRK">
-                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 989;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
