--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
@@ -27,35 +27,35 @@
             </div>
             <div id="divSFTip" class="Warn" style="z-index: 996;"></div>
         </div>
-        <div id="divSJPPYXH" class="div_row" style="z-index: 999">
+        <div id="divPPYXH" class="div_row" style="z-index: 999">
             <div class="div_row_left font_five">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">品牌与型号</span>
             </div>
             <div class="div_row_right">
-                <div id="divSJPPText" class="div_select_out SRK" style="z-index: 997;">
-                    <div id="divSJPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                <div id="divPPText" class="div_select_out SRK" style="z-index: 997;">
+                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input id="PPID" type="hidden" />
-                        <span id="spanSJPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
+                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divSJPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divSJXHText" class="div_select_out SRK" style="z-index: 997;">
-                    <div id="divSJXHSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanSJXH" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择型号</span>
+                <div id="divXHText" class="div_select_out SRK" style="z-index: 997;">
+                    <div id="divXHSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanXH" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择型号</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divSJXH" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divXH" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divSJPPYXHTip" class="Warn" style="z-index: 996;"></div>
+                <div id="divPPYXHTip" class="Warn" style="z-index: 996;"></div>
             </div>
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
@@ -83,19 +83,19 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 993;"></div>
         </div>
-        <div id="divTSBQ" class="div_row" style="z-index: 992; height: 280px;">
+        <div id="divPSFS" class="div_row" style="z-index: 992; height: 280px;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span id="spanTSBQ">特色标签</span>
+                <span id="spanPSFS">配送方式</span>
             </div>
-            <div id="divTSBQText" class="div_row_right">
+            <div id="divPSFSText" class="div_row_right">
             </div>
-            <div id="divTSBQTip" class="Warn" style="z-index: 991;"></div>
+            <div id="divPSFSTip" class="Warn" style="z-index: 991;"></div>
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">交易地点</span>
+                <span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
@@ -115,8 +115,9 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divSZQYTip" class="Warn" style="z-index: 989;"></div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
+            <div id="divSZQYTip" class="Warn"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
@@ -132,7 +133,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 995;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 988;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">详情描述</span>
